--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>          
                 <p style="text-align:center">
                   <a href="mailto:sroutra2@cs.cmu.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="data/sandeep_resume_v3.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/sandeep_resume_v3.pdf">Resume</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=MS9l8p8AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/SandeepRoutra11/">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/sroutray/">Github</a>
@@ -56,7 +56,6 @@
   </tbody>
 </table>
 
-<!-- Add this in your <head> or near the section -->
 <style>
   .affiliations-container {
     display: flex;
@@ -77,6 +76,16 @@
     max-width: 100%;
     max-height: 60px;
     object-fit: contain;
+    display: block;
+    margin: 0 auto;
+  }
+
+  /* Ensure all logos sit in the same height space */
+  .logo-wrapper {
+    height: 70px; /* adjust as needed */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 10px;
   }
 
@@ -84,42 +93,54 @@
     display: block;
     font-size: 13px;
     color: #444;
+    line-height: 1.3;
+    min-height: 32px; /* ensure uniform height if line breaks vary */
   }
 </style>
 
-<!-- Affiliation logos (inline) -->
 <div class="affiliations-container">
   <div class="affiliation">
     <a href="https://www.iitk.ac.in/" target="_blank">
-      <img src="images/iitk_logo.png" alt="IIT Kanpur">
+      <div class="logo-wrapper">
+        <img src="images/iitk_logo.png" alt="IIT Kanpur">
+      </div>
       <small>IIT Kanpur<br>2017-2021</small>
     </a>
   </div>
   <div class="affiliation">
     <a href="https://vectorinstitute.ai/" target="_blank">
-      <img src="images/vector_institute_logo.png"Vector Institute">
+      <div class="logo-wrapper">
+        <img src="images/vector_institute_logo.png" alt="Vector Institute">
+      </div>
       <small>Vector Institute<br>2020-2022</small>
     </a>
   </div>
   <div class="affiliation">
     <a href="https://research.samsung.com/" target="_blank">
-      <img src="images/sr_logo.png" alt="Samsung Research">
-      <small>Samsung Research<br>2021–2024</small>
+      <div class="logo-wrapper">
+        <img src="images/sr_logo.png" alt="Samsung Research">
+      </div>
+      <small>Samsung Research<br>2021-2024</small>
     </a>
   </div>
   <div class="affiliation">
     <a href="https://www.cmu.edu/" target="_blank">
-      <img src="images/cmu_logo.png" alt="CMU">
+      <div class="logo-wrapper">
+        <img src="images/cmu_logo.png" alt="CMU">
+      </div>
       <small>CMU<br>2024-</small>
     </a>
   </div>
   <div class="affiliation">
-    <a href="https://https://www.skild.ai/" target="_blank">
-      <img src="images/skild.ico" alt="Skild AI">
+    <a href="https://www.skild.ai/" target="_blank">
+      <div class="logo-wrapper">
+        <img src="images/skild.ico" alt="Skild AI">
+      </div>
       <small>Skild AI<br>2025-</small>
     </a>
   </div>
 </div>
+
 
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
